--- a/eCommerce/e-commerce-client/src/index.css
+++ b/eCommerce/e-commerce-client/src/index.css
@@ -18,6 +18,12 @@
     overflow: hidden;
     border-radius: 5px;
     margin-bottom: 1.5rem;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.category-item:hover {
+    transform: scale(1.05);
 }
 
 .category-overlay {
